--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,20 @@
 body {
   text-align: center;
   font-family: 'Arial';
-  color: blue;
+  color: #333;
+  font-size: 16px;
+  margin: 10;
+  padding: 0;
+}
+
+#container {
+  width: 70%;
+  padding: 1em;
+  text-align: left;
+  border: 2px solid #ddd;
+  margin: 0 auto;
+}
+
+#container h1 {
+  font-size: 20px;
 }
